# unetseg

./: .coveragerc  .isort.cfg  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README-ES.md  README-es.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: conf.py  index.md  installation.md  requirements.txt
src/unetseg/: evaluate.py  postprocess.py  predict.py  skeleton.py  train.py  utils.py
src/unetseg/console/: predict.py  train.py
tests/: conftest.py  test_evaluate.py  test_postprocess.py  test_predict.py  test_skeleton.py  test_train.py
tests/data/: gt_basurales_4326.geojson
tests/data/results/: 0000054272-0000054272_13_37.tif  0000054272-0000054272_13_38.tif  0000054272-0000054272_13_39.tif  0000054272-0000054272_13_40.tif  0000054272-0000054272_14_37.tif  0000054272-0000054272_14_38.tif  0000054272-0000054272_14_39.tif  0000054272-0000054272_14_40.tif  0000054272-0000054272_15_37.tif  0000054272-0000054272_15_38.tif  0000054272-0000054272_15_39.tif  0000054272-0000054272_15_40.tif  0000054272-0000054272_16_37.tif  0000054272-0000054272_16_38.tif  0000054272-0000054272_16_39.tif  0000054272-0000054272_16_40.tif  0000054272-0000054272_17_37.tif  0000054272-0000054272_17_38.tif  0000054272-0000054272_17_39.tif  0000054272-0000054272_17_40.tif
tests/data/train/extent/: 0000054272-0000054272_13_37.tif  0000054272-0000054272_13_38.tif  0000054272-0000054272_13_39.tif  0000054272-0000054272_13_40.tif  0000054272-0000054272_14_37.tif  0000054272-0000054272_14_38.tif  (+14 more)
unetseg/: evaluate.py  predict.py  skeleton.py  train.py  utils.py
(+20 files in other folders)
