[tool.poetry]
name = "unetseg"
version = "0.2.3"
description = "U-Net semantic segmentation for satellite imagery"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
albumentations = "^1.1.0"
rasterio = "^1.3.6"
matplotlib = "^3.5.1"
scikit-image = "^0.19.2"
scikit-learn = "^1.0.2"
tensorflow = ">=2.4"
tifffile = "^2022.2.9"
tqdm = "^4.62.3"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
pytest-datadir = "^1.3.1"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.7.1"

[tool.pytest.ini_options]
addopts = "--exitfirst --failed-first --cov=unetseg --cov-report html --cov-report xml --cov-report term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
